# th-shopping-api

./: .gitignore  Dockerfile  README.md  alembic.ini  containers.py  database.py  database_models.py  docker-compose.yml  main.py  pyproject.toml
example/api/: db.py  migrate_db.py
example/api/models/: task.py
example/api/router/: done.py  task.py
example/api/schemas/: task.py
migrations/: env.py
migrations/versions/: 2025_05_06_0850-d22db8f1a9ac_product_table_add_신규.py  2025_05_06_0851-fc8d7c118cfa_product_column_add_가격.py  2025_05_06_0907-3fc21259b2df_product_column_add_등록자_정보_server_.py  2025_05_06_0935-56104eef9a07_product_column_add_수정자_정보_컬럼.py  2025_05_06_1037-e94baf09de82_product_column_add_삭제자_정보_컬럼.py  2025_05_09_1338-d2a80ecd1ede_add_product_table.py  2025_05_14_1332-92b7b81a62e7_modify_view_flag_unsigned.py  2025_05_14_1334-9db3511edfbd_modify_view_flag_unsigned.py
product/application/: product_service.py
product/domain/: product.py
product/domain/repository/: product_repo.py
product/infra/db_models/: product.py
product/infra/repository/: product_repo.py
product/interface/controllers/: product_controller.py
product/schemas/: product.py  product_create.py  product_list_response.py  product_response.py  product_soft_delete.py  product_update.py  product_update_activate.py
seller/infra/db_models/: seller.py
