[tool.poetry]
name = "th-shopping-api"
version = "0.1.0"
description = ""
authors = ["leetaehee <lastride25@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.40"
pymysql = "^1.1.1"
py-ulid = "^1.0.3"
alembic = "^1.15.2"
mysqlclient = "^2.2.7"
dependency-injector = "^4.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
